# django-sage-qrcode

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
django_sage_qrcode/: apps.py
django_sage_qrcode/admin/: __init__.py  barcode.py  base.py  contact.py  payment.py  qrcode.py  social_media.py  utils.py
django_sage_qrcode/admin/actions/: __init__.py  download.py
django_sage_qrcode/api/: urls.py
django_sage_qrcode/api/serializer/: __init__.py  barcode.py  base.py  contact.py  payment.py  qrcode.py  social_media.py
django_sage_qrcode/api/views/: __init__.py  barcode.py  contact.py  payment.py  qrcode.py  social_media.py
django_sage_qrcode/forms/: __init__.py  forms.py
django_sage_qrcode/helpers/filters/: __init__.py  qrcodeadmin.py
django_sage_qrcode/helpers/validators/: __init__.py  bitcoin.py  event.py  geo_location.py  iban.py  image.py  phone_number.py  socials.py
django_sage_qrcode/mixins/: __init__.py
django_sage_qrcode/models/: __init__.py  barcode.py  bitcoin.py  card.py  epc.py  qrcode.py  social_media.py  wifi.py
django_sage_qrcode/service/: __init__.py  barcode.py  base.py  contact_qrcode.py  payment_qrcode.py  social_qrcode.py
django_sage_qrcode/tests/: __init__.py  barcode.py  qrcode.py
django_sage_qrcode/utils/: __init__.py  admin.py  qrcode.py
docs/source/: conf.py  index.rst  modules.rst
docs/source/getting_started/: admin.rst  index.rst  installation.rst  models.rst  modules.rst  service.rst
sage_qrcode/: apps.py  check.py
sage_qrcode/admin/: __init__.py  barcode.py  base.py  contact.py  payment.py  social_media.py
sage_qrcode/admin/actions/: __init__.py  download.py
sage_qrcode/api/serializer/: __init__.py  barcode.py  base.py  contact.py  payment.py  social_media.py
sage_qrcode/api/views/: barcode.py  contact.py  payment.py  social_media.py
sage_qrcode/forms/: __init__.py  forms.py
sage_qrcode/helpers/: type.py
sage_qrcode/helpers/filters/: qrcodeadmin.py
sage_qrcode/helpers/validators/: __init__.py  bitcoin.py  event.py  geo_location.py  iban.py  image.py  phone_number.py  socials.py
sage_qrcode/mixins/: time.py
sage_qrcode/models/: __init__.py  barcode.py  bitcoin.py  card.py  epc.py  qrcode.py  social_media.py  wifi.py
sage_qrcode/service/: __init__.py  barcode.py  base.py  contact_qrcode.py  payment_qrcode.py  social_qrcode.py
sage_qrcode/tests/: __init__.py  barcode.py  conftest.py  qrcode.py  test_utils.py
sage_qrcode/tests/service/: test_barcode.py  test_contact_qrcode.py  test_payment_qrcode.py  test_social_media_qrcode.py
sage_qrcode/tests/validators/: test_bitcoin.py  test_bitcoin_validator.py  test_event.py  test_event_validator.py  test_geolocation.py  test_iban.py  test_iban_validator.py  test_image.py  test_misc_validators.py  test_number_validator.py  test_phone_number.py  test_socail_media.py  test_social_media.py
sage_qrcode/utils/: admin.py  qrcode.py
